Replace platform thread pool executor with virtual threads